[gd_scene load_steps=18 format=2]

[ext_resource path="res://asset/fonts/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://asset/textures/32text/32window1.png" type="Texture" id=2]
[ext_resource path="res://asset/textures/hudmenu/arcadehyper.png" type="Texture" id=3]
[ext_resource path="res://asset/sounds/songspace1.ogg" type="AudioStream" id=4]
[ext_resource path="res://trophy.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/tube/tubemenu.gd" type="Script" id=6]
[ext_resource path="res://scenes/tube/tube1.tres" type="Material" id=7]
[ext_resource path="res://scenes/kinematic/tile/road1.tres" type="Material" id=8]
[ext_resource path="res://asset/textures/32text/cadre2.png" type="Texture" id=9]
[ext_resource path="res://asset/textures/32text/32templefloor1.png" type="Texture" id=10]

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -1.86407, 0, -1.95999, 3.72814, 37.55, 3.92 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 113, 114, 211, 63, 127, 95, 129, 79, 0, 0, 128, 192, 0, 32, 129, 65, 37, 146, 120, 191, 51, 51, 22, 66, 170, 16, 171, 63, 127, 95, 129, 79, 0, 0, 64, 192, 0, 0, 165, 193, 37, 146, 120, 191, 0, 0, 0, 0, 119, 16, 171, 63, 127, 95, 129, 79, 0, 0, 64, 192, 0, 32, 129, 65, 0, 0, 0, 0, 51, 51, 22, 66, 164, 114, 211, 63, 127, 95, 129, 79, 0, 0, 128, 192, 0, 0, 165, 193, 0, 0, 0, 0, 51, 51, 22, 66, 122, 225, 250, 63, 0, 127, 129, 100, 0, 160, 129, 192, 0, 192, 161, 193, 37, 146, 120, 191, 51, 51, 22, 66, 170, 16, 171, 63, 0, 127, 129, 100, 0, 0, 64, 192, 0, 0, 165, 193, 0, 0, 0, 0, 51, 51, 22, 66, 164, 114, 211, 63, 0, 127, 129, 100, 0, 192, 115, 192, 0, 96, 160, 193, 180, 118, 147, 191, 51, 51, 22, 66, 110, 247, 202, 63, 0, 127, 129, 100, 0, 224, 69, 192, 0, 96, 167, 193, 38, 25, 201, 191, 51, 51, 22, 66, 226, 174, 2, 63, 0, 127, 129, 100, 0, 0, 0, 192, 0, 0, 165, 193, 217, 153, 238, 191, 51, 51, 22, 66, 199, 13, 27, 63, 0, 127, 129, 100, 0, 0, 244, 191, 0, 96, 167, 193, 217, 153, 238, 191, 51, 51, 22, 66, 254, 12, 27, 191, 0, 127, 129, 100, 0, 96, 114, 191, 0, 192, 161, 193, 38, 25, 201, 191, 51, 51, 22, 66, 25, 174, 2, 191, 0, 127, 129, 100, 0, 96, 152, 191, 0, 96, 160, 193, 180, 118, 147, 191, 51, 51, 22, 66, 10, 247, 202, 191, 0, 127, 129, 100, 0, 128, 20, 191, 0, 192, 152, 193, 37, 146, 120, 191, 51, 51, 22, 66, 69, 16, 171, 191, 0, 127, 129, 100, 0, 192, 97, 191, 0, 192, 152, 193, 37, 146, 120, 191, 0, 0, 0, 0, 119, 16, 171, 191, 73, 0, 127, 100, 0, 0, 0, 0, 0, 32, 129, 65, 38, 25, 201, 191, 51, 51, 22, 66, 25, 174, 2, 191, 73, 0, 127, 100, 0, 0, 128, 191, 0, 0, 165, 193, 37, 146, 120, 191, 51, 51, 22, 66, 69, 16, 171, 191, 73, 0, 127, 100, 0, 0, 0, 0, 0, 0, 165, 193, 38, 25, 201, 191, 0, 0, 0, 0, 125, 174, 2, 191, 73, 0, 127, 100, 0, 0, 128, 191, 0, 32, 129, 65, 38, 25, 201, 191, 0, 0, 0, 0, 125, 174, 2, 191, 127, 0, 127, 127, 0, 0, 128, 191, 0, 32, 129, 65, 38, 25, 201, 191, 51, 51, 22, 66, 226, 174, 2, 63, 127, 0, 127, 127, 0, 0, 0, 192, 0, 0, 165, 193, 38, 25, 201, 191, 51, 51, 22, 66, 25, 174, 2, 191, 127, 0, 127, 127, 0, 0, 128, 191, 0, 0, 165, 193, 38, 25, 201, 191, 0, 0, 0, 0, 125, 174, 2, 63, 127, 0, 127, 127, 0, 0, 0, 192, 0, 32, 129, 65, 38, 25, 201, 191, 0, 0, 0, 0, 125, 174, 2, 63, 127, 53, 129, 100, 0, 0, 0, 192, 0, 32, 129, 65, 37, 146, 120, 191, 51, 51, 22, 66, 170, 16, 171, 63, 127, 53, 129, 100, 0, 0, 64, 192, 0, 0, 165, 193, 38, 25, 201, 191, 51, 51, 22, 66, 226, 174, 2, 63, 127, 53, 129, 100, 0, 0, 0, 192, 0, 0, 165, 193, 37, 146, 120, 191, 0, 0, 0, 0, 119, 16, 171, 63, 127, 53, 129, 100, 0, 0, 64, 192, 0, 32, 129, 65, 0, 0, 0, 0, 51, 51, 22, 66, 63, 114, 211, 191, 31, 0, 127, 79, 0, 0, 16, 193, 0, 0, 165, 193, 37, 146, 120, 191, 0, 0, 0, 0, 119, 16, 171, 191, 31, 0, 127, 79, 0, 0, 32, 193, 0, 32, 129, 65, 37, 146, 120, 191, 51, 51, 22, 66, 69, 16, 171, 191, 31, 0, 127, 79, 0, 0, 32, 193, 0, 0, 165, 193, 0, 0, 0, 0, 0, 0, 0, 0, 113, 114, 211, 191, 31, 0, 127, 79, 0, 0, 16, 193, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 69, 16, 171, 191, 225, 0, 95, 63, 0, 0, 0, 193, 0, 0, 165, 193, 0, 0, 0, 0, 0, 0, 0, 0, 113, 114, 211, 191, 225, 0, 95, 63, 0, 0, 16, 193, 0, 32, 129, 65, 0, 0, 0, 0, 51, 51, 22, 66, 63, 114, 211, 191, 225, 0, 95, 63, 0, 0, 16, 193, 0, 0, 165, 193, 37, 146, 120, 63, 0, 0, 0, 0, 119, 16, 171, 191, 225, 0, 95, 63, 0, 0, 0, 193, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 69, 16, 171, 191, 183, 0, 53, 63, 0, 0, 0, 193, 0, 0, 165, 193, 38, 25, 201, 63, 0, 0, 0, 0, 125, 174, 2, 191, 183, 0, 53, 63, 0, 0, 224, 192, 0, 32, 129, 65, 37, 146, 120, 63, 0, 0, 0, 0, 119, 16, 171, 191, 183, 0, 53, 63, 0, 0, 0, 193, 0, 32, 129, 65, 38, 25, 201, 63, 51, 51, 22, 66, 25, 174, 2, 191, 183, 0, 53, 63, 0, 0, 224, 192, 0, 0, 165, 193, 38, 25, 201, 63, 51, 51, 22, 66, 25, 174, 2, 191, 129, 0, 0, 63, 0, 0, 224, 192, 0, 0, 165, 193, 38, 25, 201, 63, 0, 0, 0, 0, 125, 174, 2, 63, 129, 0, 0, 63, 0, 0, 192, 192, 0, 32, 129, 65, 38, 25, 201, 63, 0, 0, 0, 0, 125, 174, 2, 191, 129, 0, 0, 63, 0, 0, 224, 192, 0, 32, 129, 65, 38, 25, 201, 63, 51, 51, 22, 66, 226, 174, 2, 63, 129, 0, 0, 63, 0, 0, 192, 192, 0, 0, 165, 193, 38, 25, 201, 63, 51, 51, 22, 66, 226, 174, 2, 63, 129, 53, 203, 63, 0, 0, 192, 192, 0, 0, 165, 193, 37, 146, 120, 63, 0, 0, 0, 0, 119, 16, 171, 63, 129, 53, 203, 63, 0, 0, 160, 192, 0, 32, 129, 65, 38, 25, 201, 63, 0, 0, 0, 0, 125, 174, 2, 63, 129, 53, 203, 63, 0, 0, 192, 192, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 170, 16, 171, 63, 129, 53, 203, 63, 0, 0, 160, 192, 0, 0, 165, 193, 0, 0, 0, 0, 51, 51, 22, 66, 164, 114, 211, 63, 129, 95, 161, 63, 0, 0, 128, 192, 0, 0, 165, 193, 37, 146, 120, 63, 0, 0, 0, 0, 119, 16, 171, 63, 129, 95, 161, 63, 0, 0, 160, 192, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 170, 16, 171, 63, 129, 95, 161, 63, 0, 0, 160, 192, 0, 0, 165, 193, 0, 0, 0, 0, 0, 0, 0, 0, 113, 114, 211, 63, 129, 95, 161, 63, 0, 0, 128, 192, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 170, 16, 171, 63, 0, 127, 129, 100, 0, 192, 131, 192, 0, 192, 152, 193, 180, 118, 147, 63, 51, 51, 22, 66, 110, 247, 202, 63, 0, 127, 129, 100, 0, 96, 141, 192, 0, 192, 152, 193, 38, 25, 201, 63, 51, 51, 22, 66, 226, 174, 2, 63, 0, 127, 129, 100, 0, 192, 115, 192, 0, 32, 145, 193, 217, 153, 238, 63, 51, 51, 22, 66, 199, 13, 27, 63, 0, 127, 129, 100, 0, 160, 129, 192, 0, 192, 143, 193, 38, 25, 201, 63, 51, 51, 22, 66, 25, 174, 2, 191, 0, 127, 129, 100, 0, 0, 64, 192, 0, 96, 140, 193, 217, 153, 238, 63, 51, 51, 22, 66, 254, 12, 27, 191, 0, 127, 129, 100, 0, 224, 69, 192, 0, 32, 138, 193, 180, 118, 147, 63, 51, 51, 22, 66, 10, 247, 202, 191, 0, 127, 129, 100, 0, 0, 244, 191, 0, 32, 138, 193, 37, 146, 120, 63, 51, 51, 22, 66, 69, 16, 171, 191, 0, 127, 129, 100, 0, 0, 0, 192, 0, 96, 140, 193, 0, 0, 0, 0, 51, 51, 22, 66, 63, 114, 211, 191, 0, 127, 129, 100, 0, 96, 152, 191, 0, 32, 145, 193, 0, 0, 0, 0, 51, 51, 22, 66, 21, 225, 250, 191, 0, 127, 129, 100, 0, 96, 114, 191, 0, 192, 143, 193 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 1, 0, 0, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 5, 0, 4, 0, 7, 0, 8, 0, 5, 0, 9, 0, 8, 0, 7, 0, 8, 0, 9, 0, 10, 0, 10, 0, 11, 0, 8, 0, 11, 0, 10, 0, 12, 0, 11, 0, 12, 0, 13, 0, 14, 0, 15, 0, 16, 0, 15, 0, 14, 0, 17, 0, 18, 0, 19, 0, 20, 0, 19, 0, 18, 0, 21, 0, 22, 0, 23, 0, 24, 0, 23, 0, 22, 0, 25, 0, 26, 0, 27, 0, 28, 0, 27, 0, 26, 0, 29, 0, 30, 0, 31, 0, 32, 0, 31, 0, 30, 0, 33, 0, 34, 0, 35, 0, 36, 0, 35, 0, 34, 0, 37, 0, 38, 0, 39, 0, 40, 0, 39, 0, 38, 0, 41, 0, 42, 0, 43, 0, 44, 0, 43, 0, 42, 0, 45, 0, 46, 0, 47, 0, 48, 0, 47, 0, 46, 0, 49, 0, 4, 0, 6, 0, 50, 0, 4, 0, 50, 0, 51, 0, 51, 0, 50, 0, 52, 0, 51, 0, 52, 0, 53, 0, 53, 0, 52, 0, 54, 0, 54, 0, 55, 0, 53, 0, 54, 0, 56, 0, 55, 0, 57, 0, 56, 0, 54, 0, 58, 0, 56, 0, 57, 0, 58, 0, 59, 0, 56, 0, 13, 0, 59, 0, 58, 0, 13, 0, 12, 0, 59, 0 ),
"blend_shape_data": [  ],
"format": 2186519,
"index_count": 120,
"material": ExtResource( 7 ),
"name": "_",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 60
}

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="ArrayMesh" id=5]
surfaces/0 = {
"aabb": AABB( -1.86407, 0, -1.95999, 3.72814, 37.55, 3.92 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 113, 114, 211, 63, 127, 95, 129, 79, 0, 0, 128, 192, 0, 32, 129, 65, 37, 146, 120, 191, 51, 51, 22, 66, 170, 16, 171, 63, 127, 95, 129, 79, 0, 0, 64, 192, 0, 0, 165, 193, 37, 146, 120, 191, 0, 0, 0, 0, 119, 16, 171, 63, 127, 95, 129, 79, 0, 0, 64, 192, 0, 32, 129, 65, 0, 0, 0, 0, 51, 51, 22, 66, 164, 114, 211, 63, 127, 95, 129, 79, 0, 0, 128, 192, 0, 0, 165, 193, 0, 0, 0, 0, 51, 51, 22, 66, 122, 225, 250, 63, 0, 127, 129, 100, 0, 160, 129, 192, 0, 192, 161, 193, 37, 146, 120, 191, 51, 51, 22, 66, 170, 16, 171, 63, 0, 127, 129, 100, 0, 0, 64, 192, 0, 0, 165, 193, 0, 0, 0, 0, 51, 51, 22, 66, 164, 114, 211, 63, 0, 127, 129, 100, 0, 192, 115, 192, 0, 96, 160, 193, 180, 118, 147, 191, 51, 51, 22, 66, 110, 247, 202, 63, 0, 127, 129, 100, 0, 224, 69, 192, 0, 96, 167, 193, 38, 25, 201, 191, 51, 51, 22, 66, 226, 174, 2, 63, 0, 127, 129, 100, 0, 0, 0, 192, 0, 0, 165, 193, 217, 153, 238, 191, 51, 51, 22, 66, 199, 13, 27, 63, 0, 127, 129, 100, 0, 0, 244, 191, 0, 96, 167, 193, 217, 153, 238, 191, 51, 51, 22, 66, 254, 12, 27, 191, 0, 127, 129, 100, 0, 96, 114, 191, 0, 192, 161, 193, 38, 25, 201, 191, 51, 51, 22, 66, 25, 174, 2, 191, 0, 127, 129, 100, 0, 96, 152, 191, 0, 96, 160, 193, 180, 118, 147, 191, 51, 51, 22, 66, 10, 247, 202, 191, 0, 127, 129, 100, 0, 128, 20, 191, 0, 192, 152, 193, 37, 146, 120, 191, 51, 51, 22, 66, 69, 16, 171, 191, 0, 127, 129, 100, 0, 192, 97, 191, 0, 192, 152, 193, 37, 146, 120, 191, 0, 0, 0, 0, 119, 16, 171, 191, 73, 0, 127, 100, 0, 0, 0, 0, 0, 32, 129, 65, 38, 25, 201, 191, 51, 51, 22, 66, 25, 174, 2, 191, 73, 0, 127, 100, 0, 0, 128, 191, 0, 0, 165, 193, 37, 146, 120, 191, 51, 51, 22, 66, 69, 16, 171, 191, 73, 0, 127, 100, 0, 0, 0, 0, 0, 0, 165, 193, 38, 25, 201, 191, 0, 0, 0, 0, 125, 174, 2, 191, 73, 0, 127, 100, 0, 0, 128, 191, 0, 32, 129, 65, 38, 25, 201, 191, 0, 0, 0, 0, 125, 174, 2, 191, 127, 0, 127, 127, 0, 0, 128, 191, 0, 32, 129, 65, 38, 25, 201, 191, 51, 51, 22, 66, 226, 174, 2, 63, 127, 0, 127, 127, 0, 0, 0, 192, 0, 0, 165, 193, 38, 25, 201, 191, 51, 51, 22, 66, 25, 174, 2, 191, 127, 0, 127, 127, 0, 0, 128, 191, 0, 0, 165, 193, 38, 25, 201, 191, 0, 0, 0, 0, 125, 174, 2, 63, 127, 0, 127, 127, 0, 0, 0, 192, 0, 32, 129, 65, 38, 25, 201, 191, 0, 0, 0, 0, 125, 174, 2, 63, 127, 53, 129, 100, 0, 0, 0, 192, 0, 32, 129, 65, 37, 146, 120, 191, 51, 51, 22, 66, 170, 16, 171, 63, 127, 53, 129, 100, 0, 0, 64, 192, 0, 0, 165, 193, 38, 25, 201, 191, 51, 51, 22, 66, 226, 174, 2, 63, 127, 53, 129, 100, 0, 0, 0, 192, 0, 0, 165, 193, 37, 146, 120, 191, 0, 0, 0, 0, 119, 16, 171, 63, 127, 53, 129, 100, 0, 0, 64, 192, 0, 32, 129, 65, 0, 0, 0, 0, 51, 51, 22, 66, 63, 114, 211, 191, 31, 0, 127, 79, 0, 0, 16, 193, 0, 0, 165, 193, 37, 146, 120, 191, 0, 0, 0, 0, 119, 16, 171, 191, 31, 0, 127, 79, 0, 0, 32, 193, 0, 32, 129, 65, 37, 146, 120, 191, 51, 51, 22, 66, 69, 16, 171, 191, 31, 0, 127, 79, 0, 0, 32, 193, 0, 0, 165, 193, 0, 0, 0, 0, 0, 0, 0, 0, 113, 114, 211, 191, 31, 0, 127, 79, 0, 0, 16, 193, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 69, 16, 171, 191, 225, 0, 95, 63, 0, 0, 0, 193, 0, 0, 165, 193, 0, 0, 0, 0, 0, 0, 0, 0, 113, 114, 211, 191, 225, 0, 95, 63, 0, 0, 16, 193, 0, 32, 129, 65, 0, 0, 0, 0, 51, 51, 22, 66, 63, 114, 211, 191, 225, 0, 95, 63, 0, 0, 16, 193, 0, 0, 165, 193, 37, 146, 120, 63, 0, 0, 0, 0, 119, 16, 171, 191, 225, 0, 95, 63, 0, 0, 0, 193, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 69, 16, 171, 191, 183, 0, 53, 63, 0, 0, 0, 193, 0, 0, 165, 193, 38, 25, 201, 63, 0, 0, 0, 0, 125, 174, 2, 191, 183, 0, 53, 63, 0, 0, 224, 192, 0, 32, 129, 65, 37, 146, 120, 63, 0, 0, 0, 0, 119, 16, 171, 191, 183, 0, 53, 63, 0, 0, 0, 193, 0, 32, 129, 65, 38, 25, 201, 63, 51, 51, 22, 66, 25, 174, 2, 191, 183, 0, 53, 63, 0, 0, 224, 192, 0, 0, 165, 193, 38, 25, 201, 63, 51, 51, 22, 66, 25, 174, 2, 191, 129, 0, 0, 63, 0, 0, 224, 192, 0, 0, 165, 193, 38, 25, 201, 63, 0, 0, 0, 0, 125, 174, 2, 63, 129, 0, 0, 63, 0, 0, 192, 192, 0, 32, 129, 65, 38, 25, 201, 63, 0, 0, 0, 0, 125, 174, 2, 191, 129, 0, 0, 63, 0, 0, 224, 192, 0, 32, 129, 65, 38, 25, 201, 63, 51, 51, 22, 66, 226, 174, 2, 63, 129, 0, 0, 63, 0, 0, 192, 192, 0, 0, 165, 193, 38, 25, 201, 63, 51, 51, 22, 66, 226, 174, 2, 63, 129, 53, 203, 63, 0, 0, 192, 192, 0, 0, 165, 193, 37, 146, 120, 63, 0, 0, 0, 0, 119, 16, 171, 63, 129, 53, 203, 63, 0, 0, 160, 192, 0, 32, 129, 65, 38, 25, 201, 63, 0, 0, 0, 0, 125, 174, 2, 63, 129, 53, 203, 63, 0, 0, 192, 192, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 170, 16, 171, 63, 129, 53, 203, 63, 0, 0, 160, 192, 0, 0, 165, 193, 0, 0, 0, 0, 51, 51, 22, 66, 164, 114, 211, 63, 129, 95, 161, 63, 0, 0, 128, 192, 0, 0, 165, 193, 37, 146, 120, 63, 0, 0, 0, 0, 119, 16, 171, 63, 129, 95, 161, 63, 0, 0, 160, 192, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 170, 16, 171, 63, 129, 95, 161, 63, 0, 0, 160, 192, 0, 0, 165, 193, 0, 0, 0, 0, 0, 0, 0, 0, 113, 114, 211, 63, 129, 95, 161, 63, 0, 0, 128, 192, 0, 32, 129, 65, 37, 146, 120, 63, 51, 51, 22, 66, 170, 16, 171, 63, 0, 127, 129, 100, 0, 192, 131, 192, 0, 192, 152, 193, 180, 118, 147, 63, 51, 51, 22, 66, 110, 247, 202, 63, 0, 127, 129, 100, 0, 96, 141, 192, 0, 192, 152, 193, 38, 25, 201, 63, 51, 51, 22, 66, 226, 174, 2, 63, 0, 127, 129, 100, 0, 192, 115, 192, 0, 32, 145, 193, 217, 153, 238, 63, 51, 51, 22, 66, 199, 13, 27, 63, 0, 127, 129, 100, 0, 160, 129, 192, 0, 192, 143, 193, 38, 25, 201, 63, 51, 51, 22, 66, 25, 174, 2, 191, 0, 127, 129, 100, 0, 0, 64, 192, 0, 96, 140, 193, 217, 153, 238, 63, 51, 51, 22, 66, 254, 12, 27, 191, 0, 127, 129, 100, 0, 224, 69, 192, 0, 32, 138, 193, 180, 118, 147, 63, 51, 51, 22, 66, 10, 247, 202, 191, 0, 127, 129, 100, 0, 0, 244, 191, 0, 32, 138, 193, 37, 146, 120, 63, 51, 51, 22, 66, 69, 16, 171, 191, 0, 127, 129, 100, 0, 0, 0, 192, 0, 96, 140, 193, 0, 0, 0, 0, 51, 51, 22, 66, 63, 114, 211, 191, 0, 127, 129, 100, 0, 96, 152, 191, 0, 32, 145, 193, 0, 0, 0, 0, 51, 51, 22, 66, 21, 225, 250, 191, 0, 127, 129, 100, 0, 96, 114, 191, 0, 192, 143, 193 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 1, 0, 0, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 5, 0, 4, 0, 7, 0, 8, 0, 5, 0, 9, 0, 8, 0, 7, 0, 8, 0, 9, 0, 10, 0, 10, 0, 11, 0, 8, 0, 11, 0, 10, 0, 12, 0, 11, 0, 12, 0, 13, 0, 14, 0, 15, 0, 16, 0, 15, 0, 14, 0, 17, 0, 18, 0, 19, 0, 20, 0, 19, 0, 18, 0, 21, 0, 22, 0, 23, 0, 24, 0, 23, 0, 22, 0, 25, 0, 26, 0, 27, 0, 28, 0, 27, 0, 26, 0, 29, 0, 30, 0, 31, 0, 32, 0, 31, 0, 30, 0, 33, 0, 34, 0, 35, 0, 36, 0, 35, 0, 34, 0, 37, 0, 38, 0, 39, 0, 40, 0, 39, 0, 38, 0, 41, 0, 42, 0, 43, 0, 44, 0, 43, 0, 42, 0, 45, 0, 46, 0, 47, 0, 48, 0, 47, 0, 46, 0, 49, 0, 4, 0, 6, 0, 50, 0, 4, 0, 50, 0, 51, 0, 51, 0, 50, 0, 52, 0, 51, 0, 52, 0, 53, 0, 53, 0, 52, 0, 54, 0, 54, 0, 55, 0, 53, 0, 54, 0, 56, 0, 55, 0, 57, 0, 56, 0, 54, 0, 58, 0, 56, 0, 57, 0, 58, 0, 59, 0, 56, 0, 13, 0, 59, 0, 58, 0, 13, 0, 12, 0, 59, 0 ),
"blend_shape_data": [  ],
"format": 2186519,
"index_count": 120,
"material": ExtResource( 8 ),
"name": "_",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 60
}

[sub_resource type="Animation" id=6]
resource_name = "New Anim"
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WorldEnvironment:environment:fog_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 14.6, 29.1, 45, 59.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.580392, 0.0666667, 0.0666667, 1 ), Color( 0.0941176, 0.419608, 0.0823529, 1 ), Color( 0.0588235, 0.458824, 0.431373, 1 ), Color( 0.4, 0.0901961, 0.447059, 1 ), Color( 0.580392, 0.0666667, 0.0666667, 1 ) ]
}

[sub_resource type="Environment" id=4]
ambient_light_color = Color( 1, 1, 1, 1 )
fog_enabled = true
fog_color = Color( 0.0611405, 0.45625, 0.408461, 1 )
fog_depth_end = 100.2
adjustment_enabled = true

[sub_resource type="Animation" id=7]
resource_name = "turn"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tube:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("menu/BG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 9.375 ), Vector2( 16, 9.375 ), Vector2( 8.42188, 5.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("menu/Start:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.768627 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("menu/quit:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.768627 ) ]
}

[node name="tubemenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="bgs" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="bgs"]
visible = false
self_modulate = Color( 0.498039, 0.458824, 0.65098, 1 )
position = Vector2( 271, 469 )
scale = Vector2( 17.0625, 8.3125 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="bgs"]
self_modulate = Color( 0.164706, 0.341176, 0.329412, 1 )
position = Vector2( 780.5, 171.5 )
scale = Vector2( 15.3438, 10.9688 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="bgs/Sprite2"]
visible = false
self_modulate = Color( 0.0980392, 0.0980392, 0.0980392, 0.768627 )
position = Vector2( -0.0326138, -7.93386 )
scale = Vector2( 0.997962, 0.494214 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="bgs/Sprite2"]
visible = false
self_modulate = Color( 0.0980392, 0.0980392, 0.0980392, 0.768627 )
position = Vector2( -0.0326138, 9.67931 )
scale = Vector2( 0.997962, 0.39504 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="bgs"]
self_modulate = Color( 0.627451, 0.603922, 0.729412, 1 )
position = Vector2( 782.625, 471 )
scale = Vector2( 15.3516, 8.375 )
texture = ExtResource( 2 )

[node name="cursortroph" type="Sprite" parent="bgs"]
self_modulate = Color( 0.858824, 1, 0.054902, 1 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 9 )
centered = false

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_top = 336.0
margin_right = 540.0
margin_bottom = 609.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 540, 270 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Spatial" type="Spatial" parent="ViewportContainer/Viewport"]

[node name="tube" type="MeshInstance" parent="ViewportContainer/Viewport/Spatial"]
transform = Transform( 9.98066, 0, 0.621697, 0, 10, 0, -0.621697, 0, 9.98066, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="ViewportContainer/Viewport/Spatial/tube"]
transform = Transform( 3, 0, 0, 0, -3, 2.62268e-07, 0, -2.62268e-07, -3, 0, 37.2006, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport/Spatial"]
transform = Transform( -1, 8.74228e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74228e-08, -1, 4.37114e-08, 0, 0, 0 )
far = 1000.0

[node name="tubedeco" type="MeshInstance" parent="ViewportContainer/Viewport/Spatial"]
transform = Transform( 14.971, 0, 0.932545, 0, 10, 0, -0.932545, 0, 14.971, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="Animcolor" type="AnimationPlayer" parent="ViewportContainer/Viewport/Spatial"]
autoplay = "New Anim"
playback_speed = 5.0
"anims/New Anim" = SubResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="ViewportContainer/Viewport/Spatial"]
environment = SubResource( 4 )

[node name="Animtube" type="AnimationPlayer" parent="ViewportContainer/Viewport/Spatial"]
anims/turn = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
playback_speed = 2.0
"anims/New Anim" = SubResource( 1 )

[node name="trophises" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="0" parent="trophises" instance=ExtResource( 5 )]
margin_left = 622.0
margin_top = 426.0
margin_right = 654.0
margin_bottom = 459.0

[node name="1" parent="trophises" instance=ExtResource( 5 )]
margin_left = 673.0
margin_top = 426.0
margin_right = 705.0
margin_bottom = 459.0

[node name="2" parent="trophises" instance=ExtResource( 5 )]
margin_left = 730.0
margin_top = 426.0
margin_right = 762.0
margin_bottom = 459.0

[node name="3" parent="trophises" instance=ExtResource( 5 )]
margin_left = 786.0
margin_top = 426.0
margin_right = 818.0
margin_bottom = 459.0

[node name="4" parent="trophises" instance=ExtResource( 5 )]
margin_left = 837.0
margin_top = 426.0
margin_right = 869.0
margin_bottom = 459.0

[node name="5" parent="trophises" instance=ExtResource( 5 )]
margin_left = 896.0
margin_top = 426.0
margin_right = 928.0
margin_bottom = 459.0

[node name="6" parent="trophises" instance=ExtResource( 5 )]
margin_left = 622.0
margin_top = 474.0
margin_right = 654.0
margin_bottom = 507.0

[node name="7" parent="trophises" instance=ExtResource( 5 )]
margin_left = 673.0
margin_top = 474.0
margin_right = 705.0
margin_bottom = 507.0

[node name="8" parent="trophises" instance=ExtResource( 5 )]
margin_left = 730.0
margin_top = 474.0
margin_right = 762.0
margin_bottom = 507.0

[node name="9" parent="trophises" instance=ExtResource( 5 )]
margin_left = 786.0
margin_top = 474.0
margin_right = 818.0
margin_bottom = 507.0

[node name="10" parent="trophises" instance=ExtResource( 5 )]
margin_left = 837.0
margin_top = 474.0
margin_right = 869.0
margin_bottom = 507.0

[node name="11" parent="trophises" instance=ExtResource( 5 )]
margin_left = 896.0
margin_top = 474.0
margin_right = 928.0
margin_bottom = 507.0

[node name="menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="cursormode" type="ColorRect" parent="menu"]
margin_left = 607.0
margin_top = 192.0
margin_right = 740.0
margin_bottom = 259.0
color = Color( 1, 0.678431, 0, 1 )

[node name="cursorlevel" type="ColorRect" parent="menu"]
margin_left = 583.0
margin_top = 71.0
margin_right = 704.0
margin_bottom = 138.0
color = Color( 1, 0.678431, 0, 1 )

[node name="easy" type="Button" parent="menu"]
margin_left = 586.0
margin_top = 75.0
margin_right = 699.0
margin_bottom = 132.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Easy"

[node name="medium" type="Button" parent="menu"]
margin_left = 726.0
margin_top = 79.0
margin_right = 852.0
margin_bottom = 136.0
rect_scale = Vector2( 0.9, 0.9 )
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Medium"

[node name="hard" type="Button" parent="menu"]
margin_left = 890.0
margin_top = 77.0
margin_right = 1016.0
margin_bottom = 134.0
rect_scale = Vector2( 0.9, 0.9 )
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Hard"

[node name="static" type="Button" parent="menu"]
margin_left = 615.0
margin_top = 196.0
margin_right = 728.0
margin_bottom = 253.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Static"

[node name="dynamic" type="Button" parent="menu"]
margin_left = 833.0
margin_top = 196.0
margin_right = 956.0
margin_bottom = 253.0
rect_scale = Vector2( 0.9, 1 )
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Dynamic"

[node name="mode" type="Label" parent="menu"]
margin_left = 694.0
margin_top = 16.0
margin_right = 845.0
margin_bottom = 65.0
rect_scale = Vector2( 1.3, 1 )
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.945098, 0.678431, 0.219608, 1 )
text = "MODE :"

[node name="descmode" type="Label" parent="menu"]
margin_left = 547.0
margin_top = 261.0
margin_right = 1107.0
margin_bottom = 341.0
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.278431, 0.278431, 1 )
text = "Go forward and avoid obstacles!"
align = 1
autowrap = true
clip_text = true

[node name="desclevel" type="Label" parent="menu"]
margin_left = 550.0
margin_top = 134.0
margin_right = 1011.0
margin_bottom = 188.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.686275, 0.686275, 0.686275, 1 )
text = "5 / 10 obstacles."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="score" type="Label" parent="menu"]
margin_left = 8.0
margin_top = 336.0
margin_right = 480.0
margin_bottom = 385.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.792157, 0.447059, 0, 1 )
text = "Best score : "
autowrap = true
clip_text = true

[node name="desctrophies" type="Label" parent="menu"]
margin_left = 558.0
margin_top = 524.0
margin_right = 1048.0
margin_bottom = 587.0
rect_scale = Vector2( 0.9, 1 )
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.905882, 0.905882, 0.905882, 1 )
text = "fdgdf dfg dg dfg "
autowrap = true
clip_text = true

[node name="Label" type="Label" parent="menu"]
margin_left = 654.0
margin_top = 367.0
margin_right = 920.0
margin_bottom = 416.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0.862745, 0, 1 )
text = "TROPHIES :"

[node name="top" type="Sprite" parent="menu"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 270, 470 )
scale = Vector2( 16.9375, 8.375 )
texture = ExtResource( 9 )

[node name="BG" type="Sprite" parent="menu"]
scale = Vector2( 8.42188, 5.25 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Start" type="Button" parent="menu"]
modulate = Color( 1, 1, 1, 0.768627 )
margin_left = 73.0
margin_top = 133.0
margin_right = 222.0
margin_bottom = 190.0
rect_rotation = -15.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "START"
flat = true

[node name="quit" type="Button" parent="menu"]
modulate = Color( 1, 1, 1, 0.768627 )
margin_left = 433.0
margin_top = -2.0
margin_right = 507.0
margin_bottom = 55.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.0862745, 0.356863, 1, 1 )
enabled_focus_mode = 0
text = "Quit"
flat = true

[connection signal="pressed" from="menu/easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="menu/medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="menu/hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="menu/static" to="." method="_on_static_pressed"]
[connection signal="pressed" from="menu/dynamic" to="." method="_on_dynamic_pressed"]
[connection signal="pressed" from="menu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="menu/quit" to="." method="_on_quit_pressed"]
